[package]
name = "cbnf-rs"
version = "0.1.0"
edition = "2021"
description = "A rust definition of the CBNF network header format"
license = "MIT-0"
readme = "README.md"
repository = "https://github.com/cosmobobak/cbnf"
keywords = ["cbnf", "network", "header", "format", "chess"]
categories = ["games", "no-std", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
